
    instead of

    if ( $alertcnt > 0 )

- 25 Jul 2014 M.Fuerstenau version 0.9.18
  - New option --perf_free_space for checking volumes. It must be used 
    with --usedspace. In versions prior to 0.9.18 perfdata was always 
    deliverd as free space even if --usedspace was selected. From 0.9.18
    on when using --usedspace perfdata is recorded as used space. To prevent
    old perfdata use this option.
  - Cluster - removed checks for CPU and MEM
    - Both checks were senseless for alarming because there are no thresholds.
      A cluster or resource group is a group of Vmware hosts. Not a logical 
      construct taking parts of the hosts in a resource group in a manner
      that several clusters are using the same hosts. So the amount of CPU
      and memory of all hosts is the CPU and memory of the cluster. Monitoring
      this makes no sense because there are no thresholds for alerting. For
      example 50% CPU usage of a cluster can be one host with 90%, and two
      with 30% each. With an average of 50% everything seems to be ok but one
      machine has definetely a problem. Same for memory. 

- 21 Aug 2014 M.Fuerstenau version 0.9.19
  - host_runtime_info()
    - Some minor corrections in output.
  - host_storage_info()
    - Some corrections in output for LUNs. Using <code> in output was a
      really stupid idea because the code (like ok,error-lostCommunication or
      whatever is valid there) was interpreted as non existing HTML code.
    - Some corrections in output for multipath/paths.
    - Bugfix. Due to a wrong placed curly bracked the output was doubled. Fixed.
  - host_runtime_info()
    - Small bugfix. It may happen within the heath check that some values are not set
      by VMware/hardware. In this case we have an
      "[Use of uninitialized value in concatenation (.) or string ..."
      To avoid this we check the values of the hash with each loop an in case a value
      is not set we replace it whit the string "Unknown".