@@ -1,5 +1,5 @@
 
-check_vmware_esx.pl,Version 0.9.19
+check_vmware_esx.pl,Version 0.9.20
 
 This vmware Infrastructure monitoring plugin is free software, and comes with ABSOLUTELY NO WARRANTY.
 It may be used, redistributed and/or modified under the terms of the GNU General Public Licence 
@@ -70,6 +70,7 @@ Volumes:
 or with
 -s, --subselect=<name>              free space info for volume with name <name>
 
+    --gigabyte                      Output in GB instead of MB
     --usedspace                     Output used space instead of free
 
     --perf_free_space               Perfdata for free space instead of used space. In versions prior to 0.9.18
@@ -88,8 +89,12 @@ or with
 -w, --warning=<threshold>           Warning threshold.
 -c, --critical=<threshold>          Critical threshold.
                                     Thresholds should be either a simple counter or a percentage
-                                    value in the nn% (i.e. 90%). If checking more than a single
-                                    with --usedspace volume only percent is allowed as threshold.
+                                    value in the n% (i.e. 90%). If checking more than a single
+                                    with --usedspace volume only percent is allowed as threshold or
+                                    --spaceleft must be used.
+    --spaceleft                     This has to be used in conjunction with thresholds as mentioned above.
+                                    The thresholds must be specified as the space left on device and with the
+                                    same unit (MB or GB).
 
 Runtime Info:
 -------------
@@ -358,8 +363,12 @@ or with
 -w, --warning=<threshold>           Warning threshold.
 -c, --critical=<threshold>          Critical threshold.
                                     Thresholds should be either a simple counter or a percentage
-                                    value in the nn% (i.e. 90%). If checking more than a single
-                                    with --usedspace volume only percent is allowed as threshold.
+                                    value in the n% (i.e. 90%). If checking more than a single
+                                    with --usedspace volume only percent is allowed as threshold or
+                                    --spaceleft must be used.
+    --spaceleft                     This has to be used in conjunction with thresholds as mentioned above.
+                                    The thresholds must be specified as the space left on device and with the
+                                    same unit (MB or GB).
 
 Disk I/O:
 ---------
@@ -828,6 +837,7 @@ Volumes:
 or with
 -s, --subselect=<name>              free space info for volume with name <name>
 
+    --gigabyte                      Output in GB instead of MB
     --usedspace                     Output used space instead of free
 
     --perf_free_space               Perfdata for free space instead of used space. In versions prior to 0.9.18
@@ -846,6 +856,10 @@ or with
 -w, --warning=<threshold>           Warning threshold.
 -c, --critical=<threshold>          Critical threshold.
                                     Thresholds should be either a simple counter or a percentage
-                                    value in the nn% (i.e. 90%). If checking more than a single
-                                    with --usedspace volume only percent is allowed as threshold.
+                                    value in the n% (i.e. 90%). If checking more than a single
+                                    with --usedspace volume only percent is allowed as threshold or
+                                    --spaceleft must be used.
+    --spaceleft                     This has to be used in conjunction with thresholds as mentioned above.
+                                    The thresholds must be specified as the space left on device and with the
+                                    same unit (MB or GB).
 
